logs/dag_id=predict_values_TS_22/run_id=scheduled__2024-08-04T000000+0000/task_id=get_deaths_dataset.create_deaths_table/attempt=1.log
[2024-08-17T10:32:25.436+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-08-17T10:32:25.450+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: predict_values_TS_22.get_deaths_dataset.create_deaths_table scheduled__2024-08-04T00:00:00+00:00 [queued]>
[2024-08-17T10:32:25.459+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: predict_values_TS_22.get_deaths_dataset.create_deaths_table scheduled__2024-08-04T00:00:00+00:00 [queued]>
[2024-08-17T10:32:25.459+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2024-08-17T10:32:25.472+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): get_deaths_dataset.create_deaths_table> on 2024-08-04 00:00:00+00:00
[2024-08-17T10:32:25.481+0000] {warnings.py:110} WARNING - /home/airflow/.local/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=23713) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-08-17T10:32:25.483+0000] {standard_task_runner.py:63} INFO - Started process 28336 to run task
[2024-08-17T10:32:25.483+0000] {standard_task_runner.py:90} INFO - Running: ['airflow', 'tasks', 'run', 'predict_values_TS_22', 'get_deaths_dataset.create_deaths_table', 'scheduled__2024-08-04T00:00:00+00:00', '--job-id', '130', '--raw', '--subdir', 'DAGS_FOLDER/etl.py', '--cfg-path', '/tmp/tmp9y60y20p']
[2024-08-17T10:32:25.485+0000] {standard_task_runner.py:91} INFO - Job 130: Subtask get_deaths_dataset.create_deaths_table
[2024-08-17T10:32:25.528+0000] {task_command.py:426} INFO - Running <TaskInstance: predict_values_TS_22.get_deaths_dataset.create_deaths_table scheduled__2024-08-04T00:00:00+00:00 [running]> on host 57503ef29846
[2024-08-17T10:32:25.611+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Ruslan Solarev' AIRFLOW_CTX_DAG_ID='predict_values_TS_22' AIRFLOW_CTX_TASK_ID='get_deaths_dataset.create_deaths_table' AIRFLOW_CTX_EXECUTION_DATE='2024-08-04T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-08-04T00:00:00+00:00'
[2024-08-17T10:32:25.613+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-08-17T10:32:25.625+0000] {sql.py:276} INFO - Executing: CREATE TABLE IF NOT EXISTS Deaths (
            id SERIAL PRIMARY KEY,
            Date DATETIME,
            Country VARCHAR
            "Cases" FLOAT
            is_Pred BOOLEAN
        )
[2024-08-17T10:32:25.635+0000] {base.py:84} INFO - Using connection ID 'postgres' for task execution.
[2024-08-17T10:32:25.646+0000] {base.py:84} INFO - Using connection ID 'postgres' for task execution.
[2024-08-17T10:32:25.703+0000] {sql.py:470} INFO - Running statement: CREATE TABLE IF NOT EXISTS Deaths (
            id SERIAL PRIMARY KEY,
            Date DATETIME,
            Country VARCHAR
            "Cases" FLOAT
            is_Pred BOOLEAN
        ), parameters: None
[2024-08-17T10:32:25.708+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-08-17T10:32:25.709+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 418, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 475, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: ОШИБКА:  ошибка синтаксиса (примерное положение: ""Cases"")
LINE 5:             "Cases" FLOAT
                    ^

[2024-08-17T10:32:25.720+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=predict_values_TS_22, task_id=get_deaths_dataset.create_deaths_table, run_id=scheduled__2024-08-04T00:00:00+00:00, execution_date=20240804T000000, start_date=20240817T103225, end_date=20240817T103225
[2024-08-17T10:32:25.735+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 130 for task get_deaths_dataset.create_deaths_table (ОШИБКА:  ошибка синтаксиса (примерное положение: ""Cases"")
LINE 5:             "Cases" FLOAT
                    ^
; 28336)
[2024-08-17T10:32:25.777+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-08-17T10:32:25.787+0000] {warnings.py:110} WARNING - /home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py:1296: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `airflow.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-08-17T10:32:25.797+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-08-17T10:32:25.801+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
